fix: insert Description

--- a/views/home.erb
+++ b/views/home.erb
@@ -12,7 +12,7 @@
         <div class="result"><%= @result_searched_data %></div>
     </div>
 
-    <h3>Get Data</h3>
+    <h3>Get Data(Ex. 1402042897)</h3>
     <div class="wrap">
         <a href="/api/get_track">Get Track</a>
         <div class="result"><%= @result_track %></div>
@@ -20,11 +20,12 @@
 
     <h2>Developer Token & Music User Tokenで利用可能なリクエスト</h2>
 
-    <h3>Get Data</h3>
+    <h3>Get Data(Ex. p.samplePlaylistId)</h3>
     <div class="wrap">
         <a href="/api/get_playlist">Get Playlist</a>
         <div class="result"><%= @result_playlist %></div>
     </div>
+    <h3>Get Data(Get 3 Playlists from Your Playlist)</h3>
     <div class="wrap">
         <a href="/api/get_playlists">Get Playlists</a>
         <div class="result"><%= @result_playlists %></div>
@@ -35,7 +36,7 @@
         <a href="/api/create_playlist">Create Playlist</a>
     </div>
 
-    <h3>Add Track to Playlist</h3>
+    <h3>Add Track to Playlist(Ex. p.samplePlaylistId)</h3>
     <div class="wrap">
         <a href="/api/add_track_to_playlist">Add Track to Playlist</a>
     </div>
